--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,153 @@
 body {
   background-color: #dadada;
   font-size: 10px;
+  font-family: system-ui, sans-serif;
+  }
+
+h1 {
+  font-family: Georgia, serif;
 }
+.container{
+  display: block;
+
+}
+
+.mod {
+  text-align: center;
+  padding-top: 2.5em;
+  padding-bottom: 2.5em;
+
+}
+
+.emphasis{
+  font-variant: small-caps;
+  font-size: 2em;
+  letter-spacing: .05em;
+  font-weight: 500;
+  font-family: system-ui, sans-serif;
+  }
+
+.size{
+  width:100%;
+  height:20em;
+}
+
+#textb{
+  position: absolute;
+  top: 1.25em;
+  left: 1.5em;
+  font-family: Georgia, serif;
+  font-size: 2em;
+}
+
+#textl{
+  position: absolute;
+  top: 1.25em;
+  left: 1.5em;
+  font-family: Georgia, serif;
+  font-size: 2em;
+}
+
+#textm{
+  position: absolute;
+  top: 1.25em;
+  left: 1.5em;
+  font-family: Georgia, serif;
+  font-size: 2em;
+}
+
+#textr{
+  position: absolute;
+  top: 1.25em;
+  left: 1.5em;
+  font-family: Georgia, serif;
+  font-size: 2em;
+}
+
+.previewb {
+  position: relative;
+  float:left;
+  margin-bottom: 2em;
+}
+
+.previewl {
+  position: relative;
+  float:left;
+  margin-bottom: 2em;
+}
+
+.previewm {
+  position: relative;
+  float:left;
+  margin-bottom: 2em;
+}
+
+.previewr {
+  position: relative;
+  float:left;
+}
+
+@media screen and (min-width: 575px){
+  .size{
+    width:30em;
+    height:20em;
+  }
+  .previewb {
+    position: relative;
+    float:left;
+    margin-left:10%;
+    margin-bottom: 1.25em;
+  }
+
+  .previewl {
+    position: relative;
+    float:left;
+    margin-left:1.25em;
+    margin-bottom: 1.25em;
+  }
+
+  .previewm {
+    position: relative;
+    float:left;
+    margin-left:10%;
+  }
+
+  .previewr {
+    position: relative;
+    float:left;
+    margin-left:1.25em;
+  }
+
+  }
+
+@media screen and (min-width: 991px){
+  .size{
+    width:20em;
+    height:20em;
+  }
+
+  .previewb {
+    position: relative;
+    float:left;
+    margin-left:20%;
+  }
+
+  .previewl {
+    position: relative;
+    float:left;
+    margin-left:3em;
+    }
+
+  .previewm {
+    position: relative;
+    float:left;
+    margin-left:3em;
+  }
+
+  .previewr {
+    position: relative;
+    float:left;
+    margin-left:3em;
+
+   }
+  }
