--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #dadada;
   font-family: sans-serif;
@@ -5,7 +9,7 @@ body {
   }
 
 .container{
-  margin: 0px auto;
+  margin: auto;
   width: 100%;
 }
 
@@ -13,16 +17,17 @@ body {
 margin-top:1em;
 margin-bottom: 1em;
 font-family:sans-serif;
-font-size:2.24em;
-letter-spacing:.15em;
-text-align:left;
+font-size:1.5em;
+letter-spacing:.1em;
+text-align:center;
 text-transform:uppercase;
 }
 
 .preview {
-  height:30em;
-  width: 100%;
-  background-size:cover;
+  display: inline-block;
+  height:20em;
+  width:100%;
+  background-size:100% 100%;
   background-position:center;
 }
 
@@ -53,14 +58,11 @@ font-family: serif;
   .container{
     width:80%;
   }
-  .container> h1 {
-    text-align: center;
-  }
   .preview {
     display: inline-block;
-    margin:1%;
+    margin:2%;
     height: 20em;
-    width:38%;
+    width:45%;
   }
 }
 
@@ -68,13 +70,10 @@ font-family: serif;
   .container{
     width:80%;
   }
-  .container> h1 {
-    text-align: center;
-  }
   .preview{
     display: inline-block;
-    margin:1%;
+    margin:2%;
     height: 20em;
-    width:17%;
+    width:20%;
   }
 }
